<resources>
    <string name="app_name">Ikatech</string>
    <string name="btnLogin">Ingresar</string>
    <string name="edUser">Ususario</string>
    <string name="edPass">Contraseña</string>
    <string name="navigation_drawer_open">barra navegacion</string>
    <string name="navigation_drawer_close">barra navegacion cerrar</string>

    -- View Strings
    <string name="menuProfile">Mi Perfil</string>
    <string name="menuMyVehicles">Mis Vehiculos</string>
    <string name="menuAvailableVehicles">Vehiculos Disponibles</string>

    -- Attri profile
    <string name="tvNombre">Nombre</string>
    <string name="tvCc">Cc</string>
    <string name="tvDireccion">Direccion de Residencia</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnComprar">Comprar</string>
    <string name="btnCapGPS">Capturar Ubicacion</string>


    <string name="title_click">Title click</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_group">Group</string>
    <string name="title_activity_maps">Map</string>

    -- Attri vehicle
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="eliminacion">Solicitud Eliminacion</string>
    <string name="estado">Estado</string>
    <string name="favorito">Favorito</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nombrecoleccion">Nombre Coleccion</string>
    <string name="tipoCombustion">Tipo Combustion</string>

    <string-array name="tipos_combustion">
        <item>Hidrogeno</item>
        <item>Electrico</item>
        <item>Electrico Hibrido</item>
        <item>combustible flexible</item>
        <item>Gas Natural Vehicular</item>
        <item>Gas Licuado del Petroleo</item>
    </string-array>
</resources>